--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "homepage": "https://github.com/zinkem/fast-http-pipeline#readme",
   "dependencies": {
     "js-yaml": "^3.13.1",
-    "jsonpath": "^1.0.2"
+    "jsonpath": "^1.0.2",
+    "polka": "^0.5.2"
   }
 }
